Review Request 14124 see PLS-7518 - fixed overflowing label text for file import

--- a/le-ui/projects/leadprioritization/app/import/entry/entry.component.scss
+++ b/le-ui/projects/leadprioritization/app/import/entry/entry.component.scss
@@ -33,6 +33,11 @@
             height: auto;
             line-height: normal;
             border-radius: 8px;
+            span {
+                @include text-ellipsis;
+                display: block;
+                text-align: center;
+            }
             &.account {
                 background-image: url('/assets/images/ico-accounts-dark.png');
             }
